feat(team): add team section markup (#4)

--- a/index.html
+++ b/index.html
@@ -30,6 +30,30 @@
       <a href="projects.html" class="btn">View Projects</a>
     </div>
   </section>
+
+  <section class="team-section">
+    <div class="container">
+      <h2>Our Team</h2>
+      <div class="team-members">
+        <div class="team-member">
+          <img src="assets/images/team1.jpg" alt="Team Member 1">
+          <h3>Jane Doe</h3>
+          <p>Frontend Developer</p>
+        </div>
+        <div class="team-member">
+          <img src="assets/images/team2.jpg" alt="Team Member 2">
+          <h3>John Smith</h3>
+          <p>Backend Developer</p>
+        </div>
+        <div class="team-member">
+          <img src="assets/images/team3.jpg" alt="Team Member 3">
+          <h3>Alice Wang</h3>
+          <p>UI/UX Designer</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  
     <!-- Footer Section -->
     <footer class="site-footer">
         <div class="footer-content">
