feat(team-filter): add filtering by name/role (#6)

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <section class="team-section">
     <div class="container">
       <h2>Our Team</h2>
+      <input type="text" id="team-filter" placeholder="Search by role or name..." class="team-filter" />
       <div class="team-members">
         <div class="team-member">
           <img src="assets/images/team1.jpg" alt="Team Member 1">
