--- a/index.html
+++ b/index.html
@@ -54,6 +54,25 @@
       </div>
     </div>
   </section>
+
+  <section class="contact-section">
+    <div class="container">
+      <h2>Contact Me</h2>
+      <form id="contact-form">
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" required />
+  
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" required />
+  
+        <label for="message">Message</label>
+        <textarea id="message" name="message" rows="5" required></textarea>
+  
+        <button type="submit" class="btn">Send Message</button>
+      </form>
+    </div>
+  </section>
+  
   
     <!-- Footer Section -->
     <footer class="site-footer">
